--- a/Everything/Everything/Base.lproj/Main.storyboard
+++ b/Everything/Everything/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dVx-Eu-nPz">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--UICopyLabel-->
@@ -459,6 +460,128 @@
             </objects>
             <point key="canvasLocation" x="2142" y="-4514"/>
         </scene>
+        <!--Location-->
+        <scene sceneID="m5y-HR-EWN">
+            <objects>
+                <viewController storyboardIdentifier="LocationSBID" id="PiP-MT-ww0" customClass="LocationViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dPr-6P-EZb"/>
+                        <viewControllerLayoutGuide type="bottom" id="rS2-UZ-2QY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Suf-vc-XmK">
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xgs-4Z-pWM">
+                                <rect key="frame" x="220" y="486" width="160" height="30"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.85438603940000002" green="0.85438603940000002" blue="0.85438603940000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="CAf-uD-NPm"/>
+                                    <constraint firstAttribute="width" constant="160" id="La8-yG-2mi"/>
+                                </constraints>
+                                <state key="normal" title="Track"/>
+                                <connections>
+                                    <action selector="trackButtonAction:" destination="PiP-MT-ww0" eventType="touchUpInside" id="Kbe-ml-I5E"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Latitude:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Sw-1v-wwL">
+                                <rect key="frame" x="20" y="20" width="100" height="30"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Lhb-Nc-iU2"/>
+                                    <constraint firstAttribute="width" constant="100" id="ciw-Zc-NN5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="longitude:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ixt-TX-KL5">
+                                <rect key="frame" x="20" y="58" width="100" height="30"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="hVG-qu-DZb"/>
+                                    <constraint firstAttribute="height" constant="30" id="psK-aO-fwX"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="address:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mXW-v3-C1u">
+                                <rect key="frame" x="20" y="96" width="100" height="30"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="XXW-4C-1M1"/>
+                                    <constraint firstAttribute="height" constant="30" id="pau-Zh-ejr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uv5-6Q-ovD">
+                                <rect key="frame" x="128" y="20" width="452" height="30"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="57U-xG-QG1"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eJH-JF-9nF">
+                                <rect key="frame" x="128" y="58" width="452" height="30"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="hyi-SI-y0C"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3h5-zq-VaO">
+                                <rect key="frame" x="128" y="96" width="452" height="30"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="wbi-QO-c5c"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="rS2-UZ-2QY" firstAttribute="top" secondItem="xgs-4Z-pWM" secondAttribute="bottom" constant="20" id="0Cp-MN-fTB"/>
+                            <constraint firstItem="eJH-JF-9nF" firstAttribute="leading" secondItem="ixt-TX-KL5" secondAttribute="trailing" constant="8" id="6un-LQ-KDJ"/>
+                            <constraint firstItem="eJH-JF-9nF" firstAttribute="top" secondItem="uv5-6Q-ovD" secondAttribute="bottom" constant="8" id="7U4-ri-uqw"/>
+                            <constraint firstItem="7Sw-1v-wwL" firstAttribute="top" secondItem="dPr-6P-EZb" secondAttribute="bottom" constant="20" id="Ed3-Io-b6V"/>
+                            <constraint firstItem="mXW-v3-C1u" firstAttribute="leading" secondItem="Suf-vc-XmK" secondAttribute="leading" constant="20" id="GBC-rq-jj7"/>
+                            <constraint firstItem="7Sw-1v-wwL" firstAttribute="leading" secondItem="Suf-vc-XmK" secondAttribute="leading" constant="20" id="Pbi-Xl-H5u"/>
+                            <constraint firstItem="3h5-zq-VaO" firstAttribute="leading" secondItem="mXW-v3-C1u" secondAttribute="trailing" constant="8" id="QLo-uh-XJo"/>
+                            <constraint firstItem="ixt-TX-KL5" firstAttribute="top" secondItem="7Sw-1v-wwL" secondAttribute="bottom" constant="8" id="RJC-rv-2BN"/>
+                            <constraint firstAttribute="trailing" secondItem="3h5-zq-VaO" secondAttribute="trailing" constant="20" id="Ubv-iJ-8EA"/>
+                            <constraint firstItem="3h5-zq-VaO" firstAttribute="top" secondItem="eJH-JF-9nF" secondAttribute="bottom" constant="8" id="WlW-mq-cUa"/>
+                            <constraint firstItem="mXW-v3-C1u" firstAttribute="top" secondItem="ixt-TX-KL5" secondAttribute="bottom" constant="8" id="fir-Yg-n9U"/>
+                            <constraint firstItem="xgs-4Z-pWM" firstAttribute="centerX" secondItem="Suf-vc-XmK" secondAttribute="centerX" id="lzb-8I-5xa"/>
+                            <constraint firstItem="uv5-6Q-ovD" firstAttribute="top" secondItem="dPr-6P-EZb" secondAttribute="bottom" constant="20" id="mVV-95-57G"/>
+                            <constraint firstItem="ixt-TX-KL5" firstAttribute="leading" secondItem="Suf-vc-XmK" secondAttribute="leading" constant="20" id="s1u-9B-EbG"/>
+                            <constraint firstAttribute="trailing" secondItem="uv5-6Q-ovD" secondAttribute="trailing" constant="20" id="sJN-MG-dM8"/>
+                            <constraint firstItem="eJH-JF-9nF" firstAttribute="trailing" secondItem="Suf-vc-XmK" secondAttribute="trailingMargin" id="sVU-63-EiX"/>
+                            <constraint firstItem="uv5-6Q-ovD" firstAttribute="leading" secondItem="7Sw-1v-wwL" secondAttribute="trailing" constant="8" id="xK0-GJ-2eQ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Location" id="eja-Rf-Ji1"/>
+                    <connections>
+                        <outlet property="addressLabel" destination="3h5-zq-VaO" id="oYX-MF-bRB"/>
+                        <outlet property="latitudeLabel" destination="uv5-6Q-ovD" id="xe5-YI-Zpe"/>
+                        <outlet property="longitudeLabel" destination="eJH-JF-9nF" id="bgL-wu-bbU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ora-8Q-gdZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2954" y="-6152"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="Lr3-lb-lmA">
             <objects>
@@ -477,6 +600,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fO9-Ed-vih" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2142" y="-5323"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="XgB-94-Qte">
+            <objects>
+                <navigationController storyboardIdentifier="LocationNavSBID" automaticallyAdjustsScrollViewInsets="NO" id="Xvm-ZS-hTh" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="rls-eX-51Z">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="PiP-MT-ww0" kind="relationship" relationship="rootViewController" id="nxB-xW-SF4"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rxj-xH-ggb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2142" y="-6152"/>
         </scene>
     </scenes>
 </document>
